--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -203,7 +203,7 @@
 
 \title{Welcome!}
 \author{David J. Stanley}
-\date{2020-10-24}
+\date{2020-10-26}
 
 \begin{document}
 \maketitle
@@ -5664,7 +5664,7 @@ Conducting a sample size analysis requires a few pieces of information before yo
   Population-level effect size. To conduct a sample-size analysis you need an estimate of the population effect size you are trying to find. Most commonly, for theses, that means you needs a estimate of the population-level \(d\)-value (i.e., \(\delta\)) or population-level correlation (\(\rho\)) that you are trying to detect.
 \end{enumerate}
 
-Below we present the process for conducing a sample size analysis for the independent groups \(t\)-test, repeated measures \(t\)-test, andcorrelations. For each of these analyses we go through three steps:
+Below we present the process for conducting a sample size analysis for the independent groups \(t\)-test, repeated measures \(t\)-test, andcorrelations. For each of these analyses we go through three steps:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
