--- a/book.bib
+++ b/book.bib
@@ -349,3 +349,14 @@
   year={2017},
   publisher={The Royal Society Publishing}
 }
+
+@article{kirk1996practical,
+  title={Practical significance: A concept whose time has come},
+  author={Kirk, Roger E},
+  journal={Educational and psychological measurement},
+  volume={56},
+  number={5},
+  pages={746--759},
+  year={1996},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
