--- a/09-equivalence_test.Rmd
+++ b/09-equivalence_test.Rmd
@@ -17,7 +17,7 @@ The following CRAN packages must be installed:
 
 A common problem in the psychological literature is the interpretation of non-significant effects. As [Kirk]@kirk1996practical] notes "some researchers mistakenly interpret a failure to reject the null hypothesis as evidence for accepting it". Indeed, it unfortunately common to see an incorrect sentence like the following: "The difference between the mean IQ's for males and females was non-significant, $t$(98) = 12.247, *p*  = .458, indicating that males and females have, on average, the same intelligence." Or alternatively an incorrect sentence like this one: "The correlation between height and IQ was non-significant, $r$ = .15, *p* = .854, indicating the height was not related to IQ." Both of these sentences are incorrect because the conclusions do not follow from the reported statistics.
 
-The tendency for researchers to incorrectly conclude that there is no effect, when $p$ > .05, is particularly troubling (and ubiquitous) when interpreting the interaction in an ANOVA. For example, consider a 2 (sex) by 2 (occassion) between/within ANOVA where the dependent variable is reaction time. Imagine there as a significant sex x occasion interaction. The significant interaction indicates the relation between occasion and response time that depends on the level of sex. The researcher describes this significant interaction by comparing the reaction time of males vs females at occasion 1 and then again at occasion 2: "A comparison of the mean reaction of times of males and females at occasion 1, $t$(28) = 1.06, $p$ = .300, revealed no difference in reaction time. In contrast, at occasion 2, there was a difference in the mean reaction times of males and females, t(28) =  2.15, $p$ = .040. Thus, the reaction time was the same for males and females at occasion 1 but not occasion 2." In this example paragraph the researcher errred in the their interpreation of the results at occasion 1. Specifically, the researcher incorrectly concluded at occasion 1 that the reaction time for males and females was the same because $p$ > .05. That type of conclusion is not possible for p > .05 in a standard paired comparison / $t$-test.
+The tendency for researchers to incorrectly conclude that there is no effect, when $p$ > .05, is particularly troubling (and ubiquitous) when interpreting the interaction in an ANOVA. For example, consider a 2 (sex) by 2 (occasion) between/within ANOVA where the dependent variable is reaction time. Imagine there as a significant sex x occasion interaction. The significant interaction indicates the relation between occasion and response time that depends on the level of sex. The researcher describes this significant interaction by comparing the reaction time of males vs females at occasion 1 and then again at occasion 2: "A comparison of the mean reaction of times of males and females at occasion 1, $t$(28) = 1.06, $p$ = .300, revealed no difference in reaction time. In contrast, at occasion 2, there was a difference in the mean reaction times of males and females, t(28) =  2.15, $p$ = .040. Thus, the reaction time was the same for males and females at occasion 1 but not occasion 2." In this example paragraph the researcher erred in the their interpretation of the results at occasion 1. Specifically, the researcher incorrectly concluded at occasion 1 that the reaction time for males and females was the same because $p$ > .05. That type of conclusion is not possible for p > .05 in a standard paired comparison / $t$-test.
 
 When an effect/relation is non-significant it could mean the effect/relation does not exist. Alternatively, it could mean you didn't have sufficient statistical power to detect it. Consequently, when a $p$-value exceeds the threshold for significance (.05) you cannot conclude there is no effect. This fact is discussed at the 10 minute mark in an excellent [video](https://youtu.be/RVxHlsIw_Do) by Daniel Lakens.
 
@@ -29,14 +29,14 @@ You can use an equivalent test when you want to conclude there is not effect or 
 
 ### $t$-test
 
-* You calculate a $t$-test and expect to find a difference between the two groups. Unexpectedly, the hypothesized difference is non-signficant. A this point you can't draw much of a conclusion. You can say the groups were not statistically different but you cannot say the groups were statistically the same. An equivalence test could allow you to condlude there is no difference between the two groups.
+* You calculate a $t$-test and expect to find a difference between the two groups. Unexpectedly, the hypothesized difference is non-significant. A this point you can't draw much of a conclusion. You can say the groups were not statistically different but you cannot say the groups were statistically the same. An equivalence test could allow you to conclude there is no difference between the two groups.
 
 * For theoretical reasons the purpose of your study may be to provide that two groups are the same (e.g., two treatments for the same disease).
 
 ### Correlation
 
 
-* You calculate a correlation and expect to find a relation between two variables. Unexpectedly, the hypothesized relation is non-signficant. A this point you can't draw much of a conclusion. You can say didn't find evidence for a relation but you cannot say you found evidence of no relation. An equivalence test could allow you to conclude there is no relation.
+* You calculate a correlation and expect to find a relation between two variables. Unexpectedly, the hypothesized relation is non-significant. A this point you can't draw much of a conclusion. You can say didn't find evidence for a relation but you cannot say you found evidence of no relation. An equivalence test could allow you to conclude there is no relation.
 
 
 * For theoretical reasons the purpose of your study may be to provide that there is no relation between two variables (e.g., video game use and violent behaviors).
@@ -53,28 +53,28 @@ You can use an equivalent test when you want to conclude there is not effect or 
 
 4. Not statistically equivalent and not statistically different
 
-You can see from the possible outcomes above it is still possible to obtain an outcome that is difficult to interpret. The outcomes that are challening to interpret are most likley to occur when you have small sample sizes and lower statistical power for the equivalence test.
+You can see from the possible outcomes above it is still possible to obtain an outcome that is difficult to interpret. The outcomes that are challenging to interpret are most likely to occur when you have small sample sizes and lower statistical power for the equivalence test.
 
 ## Statistical power
 
-To avoid an ambigrous outcome from an equivalence test make sure you conduct a sample size analysis for an equivalence test. The sample size demands for an equivalence test may be **substantially** greater than for a traditional analysis. Therefore we encourage you to conduct both a traditional sample size analysis and an sample size analysis for an equivalence test before you start your study.
+To avoid an ambiguous outcome from an equivalence test make sure you conduct a sample size analysis for an equivalence test. The sample size demands for an equivalence test may be **substantially** greater than for a traditional analysis. Therefore we encourage you to conduct both a traditional sample size analysis and an sample size analysis for an equivalence test before you start your study.
 
 
 ## What is an equivalenct test
 
-A equivalence test is just a pair of one-sided $t$-tests that are used to establish an effect fall within a specificied range of effect sizes bounding zero. That is, an equivalence test is used to indicate if an effect/relation is close enough to zero to be considered zero for practical purposes.
+A equivalence test is just a pair of one-sided $t$-tests that are used to establish an effect fall within a specified range of effect sizes bounding zero. That is, an equivalence test is used to indicate if an effect/relation is close enough to zero to be considered zero for practical purposes.
 
 
 ## Defining a zero effect
 
 How do decide how to zero is close enough to be practically zero? You already did so in the the previous chapter on "Sample size analysis for NHST". In that chapter you reviewed various ways of determining the smallest effect size of interest (SESOI). Any effect below the SESOI is logically close enough to zero to, for practical purposes, be zero. However, I encourage you to review [@lakens2018equivalence] so see the full discussion on this issue. 
 
-For now, the most important aspect of conducting an equivalce test is the fact that you need to determine the smallest effect size of interest **prior** to data collection - to avoid equivlance testing being a fancy form of **$p$-[hacking](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002106)**.
+For now, the most important aspect of conducting an equivalence test is the fact that you need to determine the smallest effect size of interest **prior** to data collection - to avoid equivalence testing being a fancy form of **$p$-[hacking](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002106)**.
 
 
 ## Repeated $t$-test
 
-Consider the following scenario where you begin a study with the intent to prove there is no effect. Many years ago the cereal [Shreddies](https://fameable.com/diamond-shreddies-rebranding-case-study/144/) engaged in an interested marketing strategy. They decided to market "New Diamond Shreddies" as illustrated below. Imagine that you are a researcher tasked to compare the taste of the two types of Shreddies. Participants are given a bowl of the original Shreddies and then asked to rate it on a 1 to 15 point scale where higher ratings indicate a better taste. Following this they are given a bowl of the new Diamond Shreddies and asked rate the taste. How do you go about comparing the taste ratings if your goal is to establish the taste of the old Shreddies is the same as new Diamond Shreddies.
+Consider the following scenario where you begin a study with the intent to prove there is no effect. Many years ago the cereal [Shreddies](https://fameable.com/diamond-shreddies-rebranding-case-study/144/) engaged in an interested marketing strategy. They decided to market new Diamond Shreddies as illustrated below. Imagine that you are a researcher tasked to compare the taste of the two types of Shreddies. Participants are given a bowl of the old Shreddies and then asked to rate it on a 1 to 15 point scale where higher ratings indicate a better taste. Following this they are given a bowl of the new Diamond Shreddies and asked rate the taste. How do you go about comparing the taste ratings if your goal is to establish the taste of the old Shreddies is the same as new Diamond Shreddies?
 
 ```{r, echo=FALSE, out.width="60%"}
 knitr::include_graphics("ch_equivalence/images/diamond.jpg")
@@ -84,7 +84,7 @@ An incorrect approach to determining if the two types of cereal taste the same w
 
 ### Raw units
 
-After you collect your data (*N*" = 50) you have ratings for old Shreddies (*M* = 12.1, *SD* = 2.50) and new Diamond Shreddies  (*M* = 11.9, *SD* = 2.50). Because the same people taste both cereals you also have a correlation between the two taste ratings of $r$ = .80). You run the R-code below to conduct the equivalence test.
+After you collect your data (*N* = 50) you have ratings for old Shreddies (*M* = 12.1, *SD* = 2.50) and new Diamond Shreddies  (*M* = 11.9, *SD* = 2.50). Because the same people taste both cereals you also have a correlation between the two taste ratings of $r$ = .80. You run the R-code below to conduct the equivalence test.
 
 
 
@@ -121,15 +121,15 @@ from zero and statistically equivalent to zero.
 
 We can then report that:
 
-A repeated measures $t$-test indicates that the mean taste ratings for old Shreddiess (*M* = 12.1, *SD* = 2.50) and new Diamond Shreddies  (*M* = 11.9, *SD* = 2.50) were not significantly different, $d$ = 0.13, 95% CI [-0.15, 0.40], $t$(49) = 0.984, $p$ = 0.375. Prior to conducting analyses we established that a raw difference in the -1 to +1 range (the smallest possible change on the scale) would, for practical purposes, be considered eqivalent to zero. The equivalence test was significant $t$(49) = -1.934, $p$ = 0.0294 indicating the two means are equivalent. Thus, we can conclude that the taste ratings of the two types of Shreddies are not statistically different and that they are statistically equivalent.
+A repeated measures $t$-test indicated that the mean taste ratings for old Shreddies (*M* = 12.1, *SD* = 2.50) and new Diamond Shreddies  (*M* = 11.9, *SD* = 2.50) were not significantly different, $d$ = 0.13, 95% CI [-0.15, 0.40], $t$(49) = 0.984, $p$ = 0.375. Prior to conducting analyses we established that a raw difference in the -1 to +1 range (the smallest possible change on the scale) would, for practical purposes, be considered equivalent to zero. The equivalence test was significant $t$(49) = -1.934, $p$ = 0.029 indicating the means for the two conditions were equivalent. Thus, we can conclude that the taste ratings of the two types of Shreddies are not statistically different and that they are statistically equivalent.
 
 
-Note that the $d$-value and 95% CI obtained with MBESS command: ci.sm(ncp = 0.894, N = 50)
+Note that the $d$-value with 95% CI was obtained with the MBESS command: ci.sm(ncp = 0.894, N = 50)
 
 
 ### Standardized units
 
-You could also have run this test by indicating the smallest effect size of interest using standardized effect size (i.e., a repeated measures $d$-value).  When the standard deviation is 2.50 and the difference is 1.0 the corresponding d-value is 0.40. Therefore the code below produces a result identical to the above code. We simply specify the range of values that count as practically equivalent to zero as a $d$-value.
+You could also have run this test by indicating the smallest effect size of interest using standardized effect size (i.e., a repeated measures $d$-value).  When the standard deviation is 2.50 and the difference is 1.0 the corresponding $d$-value is 0.40. Therefore the code below produces a result identical to the above code. We simply indicate the range of values that count as practically equivalent to zero using $d$-values.
 
 
 ```{r, eval = FALSE}
@@ -209,7 +209,7 @@ powerTOSTr(alpha = .05,
 ```
 
 This indicates that we need 267 people if we are to conduct an equivalence test.
-Note that this value can sometime be much larger than the sample size we require for a traditional signficance test. Therefore, if think it's possible that will want to conclude a correlation is zero be sure to conduct a sample size analysis using equivalence testing.
+Note that this value can sometime be much larger than the sample size we require for a traditional significance test. Therefore, if think it's possible that will want to conclude a correlation is zero be sure to conduct a sample size analysis using equivalence testing.
 
 ### Equivalence
 
