--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -203,7 +203,7 @@
 
 \title{Welcome!}
 \author{David J. Stanley}
-\date{2020-10-26}
+\date{2020-10-30}
 
 \begin{document}
 \maketitle
@@ -5684,7 +5684,7 @@ As we review these steps for the analyses below we omit using subjective judgmen
 \end{rmdcaution}
 
 \hypertarget{independent-groups-t-test}{%
-\section{\texorpdfstring{Independent Groups \(t\)-test}{Independent Groups t-test}}\label{independent-groups-t-test}}
+\section{\texorpdfstring{Independent groups \(t\)-test}{Independent groups t-test}}\label{independent-groups-t-test}}
 
 \hypertarget{population-effect-size}{%
 \subsection{Population effect size}\label{population-effect-size}}
@@ -6056,7 +6056,7 @@ Let's assume that after looking at all the graphs and tables you end up sticking
 This indicates that with a sample size of 298 per group that only independent groups \(d\)-values greater than \(d\) = 0.135 will be significant.
 
 \hypertarget{repeated-measures-t-test}{%
-\section{\texorpdfstring{Repeated Measures \(t\)-test}{Repeated Measures t-test}}\label{repeated-measures-t-test}}
+\section{\texorpdfstring{Repeated measures \(t\)-test}{Repeated measures t-test}}\label{repeated-measures-t-test}}
 
 \hypertarget{population-effect-size-1}{%
 \subsection{Population effect size}\label{population-effect-size-1}}
@@ -6782,6 +6782,267 @@ This indicates that with a sample size of 261 that only sample correlations grea
 
 \hypertarget{references}{%
 \section{References}\label{references}}
+
+\hypertarget{equivalence-tests}{%
+\chapter{Equivalence tests}\label{equivalence-tests}}
+
+\hypertarget{required}{%
+\section{Required}\label{required}}
+
+The following CRAN packages must be installed:
+
+\begin{longtable}[]{@{}l@{}}
+\toprule
+Required CRAN Packages\tabularnewline
+\midrule
+\endhead
+MBESS\tabularnewline
+TOSTER\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{interpretting-non-significant-findings}{%
+\section{Interpretting non-significant findings}\label{interpretting-non-significant-findings}}
+
+A common problem in the psychological literature is the interpretation of non-significant effects. As \citep[Kirk][]{kirk1996practical} notes ``some researchers mistakenly interpret a failure to reject the null hypothesis as evidence for accepting it''. Indeed, it unfortunately common to see an incorrect sentences like the following examples based on fictitious data: ``The difference between the mean IQ's for males and females was non-significant, \(t\)(98) = 12.247, \emph{p} = .458, indicating that males and females have, on average, the same intelligence.'' Or alternatively an incorrect sentence like: ``The correlation between height and IQ was non-significant, \(r\) = .15, \emph{p} = .854, indicating that height was not related to IQ.'' Both of these sentences are statistically incorrect because the conclusions do not follow from the reported statistics.
+
+The tendency for researchers to incorrectly conclude that there is no effect, when \(p\) \textgreater{} .05, is particularly troubling (and ubiquitous) when interpreting the interaction in an ANOVA. For example, consider a 2 (sex) by 2 (occasion) between/within ANOVA where the dependent variable is reaction time. Imagine there is a significant sex x occasion interaction. The significant interaction indicates the relation between occasion and response time depends on the level of sex. The researcher describes this significant interaction by comparing the reaction times of males and females at occasion 1 and then again at occasion 2: ``A comparison of the mean reaction of times of males and females at occasion 1, \(t\)(28) = 1.06, \(p\) = .300, revealed no difference in reaction time. In contrast, at occasion 2, there was a difference in the mean reaction times of males and females, t(28) = 2.15, \(p\) = .040. Thus, reaction time were the same, on average, for males and females at occasion 1 but not occasion 2.'' In this example the researcher erred in the their interpretation of the results at occasion 1. Specifically, the researcher incorrectly concluded at occasion 1 that the reaction time for males and females was the same because \(p\) \textgreater{} .05. That type of conclusion is not possible for p \textgreater{} .05 in a standard paired comparison / \(t\)-test.
+
+The calculation of a \(p\)-value begins by assuming the null hypothesis is true; consequently, you cannot use a \(p\)-value as evidence the null hypothesis is true. That is, when a \(p\)-value exceeds the threshold for significance (.05) you cannot conclude there is no effect. This fact is discussed at the 10 minute mark in an excellent \href{https://youtu.be/RVxHlsIw_Do}{video} by Daniel Lakens.
+
+You might well wonder what to do if you do want to make the conclusion there this no effect/relation. This type of conclusion is possible but you need to use the right tool to do so. One tool for concluding there is no effect is the Bayes Factor \href{https://en.wikipedia.org/wiki/Bayes_factor}{BF} - but that is beyond the scope of this course. An easily accessible alternative for concluding there is no effect or relation is the equivalence test \citep{lakens2018equivalence}.
+
+\hypertarget{when-would-i-use-an-equivalence-test}{%
+\section{When would I use an equivalence test?}\label{when-would-i-use-an-equivalence-test}}
+
+You can use an equivalent test when you want to conclude there is not effect or relation. This situation might be more common that you might think. A few of the scenarios where you would like to use an equivalence test are outlined below:
+
+\hypertarget{t-test}{%
+\subsection{\texorpdfstring{\(t\)-test}{t-test}}\label{t-test}}
+
+\begin{itemize}
+\item
+  You calculate a \(t\)-test and expect to find a difference between the two conditions. Unexpectedly, the hypothesized difference is non-significant. At this point you can't draw much of a conclusion. You can say the groups were not statistically different but you cannot say the groups were statistically the same. An equivalence test could allow you to conclude the groups are statistically equivalent.
+\item
+  For theoretical reasons your study may begin with the primary purpose being determine if two groups are the same (e.g., two treatments for the same disease that are believed to be equally effective).
+\end{itemize}
+
+\hypertarget{correlation}{%
+\subsection{Correlation}\label{correlation}}
+
+\begin{itemize}
+\item
+  You calculate a correlation and expect to find a relation between the two variables. Unexpectedly, the hypothesized relation is non-significant. A this point you can't draw much of a conclusion. You can say didn't find evidence for a relation but you cannot say you found evidence of no relation. An equivalence test could allow you to conclude there is no relation between the two variables.
+\item
+  For theoretical reasons the purpose of your study may be to provide evidence that there is no relation between two variables (e.g., video game use and violent behaviors).
+\end{itemize}
+
+\hypertarget{possible-outcomes}{%
+\section{Possible Outcomes}\label{possible-outcomes}}
+
+\citep{lakens2018equivalence} review how a variety of outcomes from an equivalence test. These are easiest to understand in the context of a t-test with two groups. You could find the two groups are:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Not statistically equivalent and not statistically different
+\item
+  Statistically equivalent and not statistically different
+\item
+  Statistically equivalent and statistically different
+\item
+  Not statistically equivalent and not statistically different
+\end{enumerate}
+
+You can see from the possible outcomes above it is still possible to obtain an outcome that is difficult to interpret. The outcomes that are challenging to interpret are most likely to occur when you have small sample sizes and low statistical power for the equivalence test.
+
+To avoid an ambiguous outcome from an equivalence test make sure you conduct a sample size analysis for an equivalence test prior to running your study. The sample size demands for an equivalence test may be \textbf{substantially} greater than for a traditional analysis. Therefore we encourage you to conduct both a traditional sample size analysis and an sample size analysis for an equivalence test before you start collecting data.
+
+\hypertarget{what-is-an-equivalence-test}{%
+\section{What is an equivalence test}\label{what-is-an-equivalence-test}}
+
+A equivalence test is just a pair of one-sided \(t\)-tests that are used to establish an effect fall within a specified range of effect sizes bounding zero. That is, an equivalence test is used to indicate if an effect/relation is close enough to zero to be considered zero for practical purposes.
+
+\hypertarget{defining-a-zero-effect}{%
+\section{Defining a zero effect}\label{defining-a-zero-effect}}
+
+How do decide how to zero is close enough to be practically zero? You already did so in the the previous chapter on ``Sample size analysis for NHST''. In that chapter you reviewed various ways of determining the smallest effect size of interest (SESOI). Any effect below the SESOI is logically close enough to zero to, for practical purposes, be zero. However, I encourage you to review \citep{lakens2018equivalence} so see the full discussion on this issue.
+
+For now, the most important aspect of conducting an equivalence test is the fact that you need to determine the smallest effect size of interest \textbf{prior} to data collection - to avoid equivalence testing being a fancy form of intentional or unintentional \textbf{\href{https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1002106}{\(p\)-hacking}}. Take note of this point -- a recent \href{https://psyarxiv.com/3v7hx}{article} indicated that approximately 25\% of researchers have engaged in at least one form of \(p\)-hacking in the just last 12 months.
+
+\hypertarget{equivalence---repeated-measures}{%
+\section{Equivalence - repeated measures}\label{equivalence---repeated-measures}}
+
+Consider the following scenario where you begin a study with the intent to prove there is no effect. Many years ago the cereal \href{https://fameable.com/diamond-shreddies-rebranding-case-study/144/}{Shreddies} engaged in an interested marketing strategy. They decided to market new Diamond Shreddies as illustrated below. Imagine that you are a researcher tasked to compare the taste of the two types of Shreddies. Participants are given a bowl of the old Shreddies and then asked to rate it on a 1 to 15 point scale where higher ratings indicate a better taste. Following this they are given a bowl of the new Diamond Shreddies and asked rate the taste. How do you go about comparing the taste ratings if your goal is to establish the taste of the old Shreddies is the same as new Diamond Shreddies?
+
+\includegraphics[width=0.6\linewidth]{ch_equivalence/images/diamond}
+
+An incorrect approach to determining if the two types of cereal taste the same would be to \textbf{just} conduct a repeated measures \(t\)-test and look for a non-significant difference. A non-significant repeated measures \(t\)-test would leave you with no conclusion. The appropriate approach in this circumstance is to use an equivalence test. Prior to collecting data you set your smallest effect size of interest. Specifically, you imagine getting a mean for each group and calculating a difference using the original numbers on the 15-point rating scale. You decide that if that difference is between -1 and +1 (the smallest jump on the rating scale) then you will consider the two types of Shreddies to have equivalent taste. Notably, as per \citep{lakens2018equivalence}, you set this smallest effect size of interest before you examine your data - to avoid being a \(p\)-hacker.
+
+\hypertarget{raw-units}{%
+\subsection{Raw units}\label{raw-units}}
+
+After you collect your data (\emph{N} = 50) you have ratings for old Shreddies (\emph{M} = 12.1, \emph{SD} = 2.50) and new Diamond Shreddies (\emph{M} = 11.9, \emph{SD} = 2.50). Because the same people taste both cereals you also have a correlation between the two taste ratings of \(r\) = .80. You run the R-code below to conduct the equivalence test.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(TOSTER)}
+
+\KeywordTok{TOSTpaired.raw}\NormalTok{(}\DataTypeTok{m1 =} \FloatTok{12.1}\NormalTok{,}
+        \DataTypeTok{sd1 =} \FloatTok{2.5}\NormalTok{,}
+        \DataTypeTok{m2 =} \FloatTok{11.9}\NormalTok{,}
+        \DataTypeTok{sd2 =} \FloatTok{2.5}\NormalTok{,}
+        \DataTypeTok{r12 =} \FloatTok{.8}\NormalTok{,}
+        \DataTypeTok{n =} \DecValTok{50}\NormalTok{,}
+        \DataTypeTok{low_eqbound =} \DecValTok{-1}\NormalTok{,}
+        \DataTypeTok{high_eqbound =} \DecValTok{1}\NormalTok{,}
+        \DataTypeTok{plot =} \OtherTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{Equivalence Test Result}\OperatorTok{:}
+\NormalTok{The equivalence test was significant, }\KeywordTok{t}\NormalTok{(}\DecValTok{49}\NormalTok{) =}\StringTok{ }\FloatTok{-3.578}\NormalTok{, p =}\StringTok{ }\FloatTok{0.000396}\NormalTok{, }
+\NormalTok{given equivalence bounds of }\FloatTok{-1.000}\NormalTok{ and }\FloatTok{1.000}\NormalTok{ (on a raw scale) and an alpha of }\DecValTok{0}\NormalTok{.}\FloatTok{05.}
+
+\NormalTok{Null Hypothesis Test Result}\OperatorTok{:}
+\NormalTok{The null hypothesis test was non}\OperatorTok{-}\NormalTok{significant, }
+\KeywordTok{t}\NormalTok{(}\DecValTok{49}\NormalTok{) =}\StringTok{ }\FloatTok{0.894}\NormalTok{, p =}\StringTok{ }\FloatTok{0.375}\NormalTok{, given an alpha of }\DecValTok{0}\NormalTok{.}\FloatTok{05.}
+
+\NormalTok{Based on the equivalence test and the null}\OperatorTok{-}\NormalTok{hypothesis test combined, }
+\NormalTok{we can conclude that the observed effect is statistically not different}
+\NormalTok{from zero and statistically equivalent to zero.}
+\end{Highlighting}
+\end{Shaded}
+
+We can then report that:
+
+A repeated measures \(t\)-test indicated that the mean taste ratings for old Shreddies (\emph{M} = 12.1, \emph{SD} = 2.50) and new Diamond Shreddies (\emph{M} = 11.9, \emph{SD} = 2.50) were not significantly different, \(d\) = 0.13, 95\% CI {[}-0.15, 0.40{]}, \(t\)(49) = 0.984, \(p\) = 0.375. Prior to conducting analyses we established that a raw difference in the -1 to +1 range (the smallest possible change on the scale) would, for practical purposes, be considered equivalent to zero. The equivalence test was significant \(t\)(49) = -3.578, \(p\) \textless{} .001 indicating the means for the two conditions were equivalent. Thus, we can conclude that the taste ratings of the two types of Shreddies are not statistically different and that they are statistically equivalent.
+
+Note that the \(d\)-value with 95\% CI was obtained with the MBESS command: ci.sm(ncp = 0.894, N = 50)
+
+\hypertarget{standardized-units}{%
+\subsection{Standardized units}\label{standardized-units}}
+
+You could also have run this test by indicating the smallest effect size of interest using standardized effect size (i.e., a repeated measures \(d\)-value). The code below produces a result identical to the above code. We simply indicate the range of values that count as practically equivalent to zero using \(d\)-values.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(TOSTER)}
+
+\KeywordTok{TOSTpaired}\NormalTok{(}\DataTypeTok{m1 =} \FloatTok{12.1}\NormalTok{,}
+        \DataTypeTok{sd1 =} \FloatTok{2.5}\NormalTok{,}
+        \DataTypeTok{m2 =} \FloatTok{11.9}\NormalTok{,}
+        \DataTypeTok{sd2 =} \FloatTok{2.5}\NormalTok{,}
+        \DataTypeTok{r12 =} \FloatTok{.8}\NormalTok{,}
+        \DataTypeTok{n =} \DecValTok{50}\NormalTok{,}
+        \DataTypeTok{low_eqbound_dz =} \FloatTok{-0.6325}\NormalTok{,}
+        \DataTypeTok{high_eqbound_dz =} \FloatTok{0.6325}\NormalTok{,}
+        \DataTypeTok{plot =} \OtherTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\hypertarget{equivalence---independent-groups}{%
+\section{Equivalence - Independent groups}\label{equivalence---independent-groups}}
+
+\hypertarget{raw-units-1}{%
+\subsection{Raw units}\label{raw-units-1}}
+
+You could also have run this study as an independent groups \(t\)-test where different people received each type of cereal. In this case, the R-code would be as below. Note the output in this case provides an ambiguous outcome: ``the observed effect is statistically not different from zero and statistically not equivalent to zero'' due to our small sample size. Thus, the primary finding from this study is that we should have used a larger number of participants.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(TOSTER)}
+
+
+\KeywordTok{TOSTtwo.raw}\NormalTok{(}\DataTypeTok{m1 =} \FloatTok{12.1}\NormalTok{,}
+        \DataTypeTok{sd1 =} \FloatTok{2.5}\NormalTok{,}
+        \DataTypeTok{m2 =} \FloatTok{11.9}\NormalTok{,}
+        \DataTypeTok{sd2 =} \FloatTok{2.5}\NormalTok{,}
+        \DataTypeTok{n1 =} \DecValTok{50}\NormalTok{,}
+        \DataTypeTok{n2 =} \DecValTok{50}\NormalTok{,}
+        \DataTypeTok{low_eqbound =} \DecValTok{-1}\NormalTok{,}
+        \DataTypeTok{high_eqbound =} \DecValTok{1}\NormalTok{,}
+        \DataTypeTok{plot =} \OtherTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{Equivalence Test Result}\OperatorTok{:}
+\NormalTok{The equivalence test was non}\OperatorTok{-}\NormalTok{significant, }\KeywordTok{t}\NormalTok{(}\DecValTok{98}\NormalTok{) =}\StringTok{ }\FloatTok{-1.600}\NormalTok{, p =}\StringTok{ }\FloatTok{0.0564}\NormalTok{, }
+\NormalTok{given equivalence bounds of }\FloatTok{-1.000}\NormalTok{ and }\FloatTok{1.000}\NormalTok{ (on a raw scale) and an alpha of }\DecValTok{0}\NormalTok{.}\FloatTok{05.}
+
+\NormalTok{Null Hypothesis Test Result}\OperatorTok{:}
+\NormalTok{The null hypothesis test was non}\OperatorTok{-}\NormalTok{significant, }
+\KeywordTok{t}\NormalTok{(}\DecValTok{98}\NormalTok{) =}\StringTok{ }\FloatTok{0.400}\NormalTok{, p =}\StringTok{ }\FloatTok{0.690}\NormalTok{, given an alpha of }\DecValTok{0}\NormalTok{.}\FloatTok{05.}
+
+\NormalTok{Based on the equivalence test and the null}\OperatorTok{-}\NormalTok{hypothesis test combined,}
+\NormalTok{we can conclude that the observed effect is statistically not different}
+\NormalTok{from zero and statistically not equivalent to zero.}
+\end{Highlighting}
+\end{Shaded}
+
+\hypertarget{standardized-units-1}{%
+\subsection{Standardized units}\label{standardized-units-1}}
+
+The R-code again for using standardized effect sizes:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(TOSTER)}
+
+\KeywordTok{TOSTtwo}\NormalTok{(}\DataTypeTok{m1 =} \FloatTok{12.1}\NormalTok{,}
+        \DataTypeTok{sd1 =} \FloatTok{2.5}\NormalTok{,}
+        \DataTypeTok{m2 =} \FloatTok{11.9}\NormalTok{,}
+        \DataTypeTok{sd2 =} \FloatTok{2.5}\NormalTok{,}
+        \DataTypeTok{n1 =} \DecValTok{50}\NormalTok{,}
+        \DataTypeTok{n2 =} \DecValTok{50}\NormalTok{,}
+        \DataTypeTok{low_eqbound_d =} \FloatTok{-0.4}\NormalTok{,}
+        \DataTypeTok{high_eqbound_d =} \FloatTok{0.4}\NormalTok{,}
+        \DataTypeTok{plot =} \OtherTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\hypertarget{equivalence-correlation}{%
+\section{Equivalence Correlation}\label{equivalence-correlation}}
+
+Imagine we are interested in conducting a study to prove our theory that there is a strong positive relation between academic performance and self-esteem. Prior to conducing the study we determined our smallest effect size of interest was .20. A traditional sample size analysis (with a desire for 90\% power) indicated we should use a sample size of 210 (for a one-sided test). However, we also conducted a sample size analysis for an equivalence test, in case the correlation was non-significant, which suggested a larger sample size of 267. Consequently, we collected data from 267 students.
+
+Our study found \(r\) = .09, \(p\) = 0.071 (one-tailed). This non-significant difference means there is little to conclude from this study. We can't say there is a relation due to the non-significance. But, we also can't say there is no relation. Fortunately, because we established our smallest effect size of interest prior to looking at our data we can run an equivalence test with the code below.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(TOSTER)}
+\KeywordTok{TOSTr}\NormalTok{(}\DataTypeTok{n =} \DecValTok{267}\NormalTok{,}
+      \DataTypeTok{r =} \FloatTok{.09}\NormalTok{,}
+      \DataTypeTok{low_eqbound_r =} \FloatTok{-.20}\NormalTok{,}
+      \DataTypeTok{high_eqbound_r =} \FloatTok{.20}\NormalTok{, }
+      \DataTypeTok{plot =} \OtherTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{Equivalence Test Result}\OperatorTok{:}
+\NormalTok{The equivalence test was significant, p =}\StringTok{ }\FloatTok{0.0338}\NormalTok{, }
+\NormalTok{given equivalence bounds of }\FloatTok{-0.200}\NormalTok{ and }\FloatTok{0.200}\NormalTok{ and an alpha of }\DecValTok{0}\NormalTok{.}\FloatTok{05.}
+
+\NormalTok{Null Hypothesis Test Result}\OperatorTok{:}
+\NormalTok{The null hypothesis test was non}\OperatorTok{-}\NormalTok{significant, p =}\StringTok{ }\FloatTok{0.142}\NormalTok{, given an alpha of }\DecValTok{0}\NormalTok{.}\FloatTok{05.}
+
+\NormalTok{Based on the equivalence test and the null}\OperatorTok{-}\NormalTok{hypothesis test combined, }
+\NormalTok{we can conclude that the observed effect is statistically not different}
+\NormalTok{from zero and statistically equivalent to zero.}
+\end{Highlighting}
+\end{Shaded}
+
+Because we conducted the equivalence test we can write a clear results section.
+
+The relation between academic performance and self-esteem was non-significant, \(r\) = .09, 95\% CI {[}-.03, .21{]}, \(p\) = 0.071 (one-sided). A follow up equivalence test (based on our apriori smallest effect size of interest, \(\rho\) = .20) was significant, \(p\) = 0.034, which indicates that for practical purposes the relation was equivalent to zero. That is, the observed correlation, \(r\) = .09, was not statistically different from zero and it was statistically equivalent to zero.
+
+Notice how much clearer and stronger this results section is with the inclusion of an equivalence test. Note that the 95\% CI for the correlation was obtained with the MBESS command: ci.cc(r = .09, n = 267)
 
   \bibliography{book.bib,packages.bib}
 
