--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -6856,7 +6856,7 @@ You can use an equivalent test when you want to conclude there is not effect or 
 
 You can see from the possible outcomes above it is still possible to obtain an outcome that is difficult to interpret. The outcomes that are challenging to interpret are most likely to occur when you have small sample sizes and low statistical power for the equivalence test.
 
-To avoid an ambiguous outcome from an equivalence test make sure you conduct a sample size analysis for an equivalence test prior to running your study. The sample size demands for an equivalence test may be \textbf{substantially} greater than for a traditional analysis. Therefore we encourage you to conduct both a traditional sample size analysis and an sample size analysis for an equivalence test before you start collecting data.
+To avoid an ambiguous outcome from an equivalence test make sure you conduct a sample size analysis for an equivalence test prior to running your study. The sample size demands for an equivalence test may be \textbf{substantially} greater than for a traditional analysis. Therefore we encourage you to conduct both a traditional sample size analysis and a sample size analysis for an equivalence test before you start collecting data.
 
 \hypertarget{what-is-an-equivalence-test}{%
 \section{What is an equivalence test}\label{what-is-an-equivalence-test}}
