--- a/09-equivalence_test.Rmd
+++ b/09-equivalence_test.Rmd
@@ -238,3 +238,5 @@ The relation between academic performance and self-esteem was non-significant, $
 
 Notice how much clearer and stronger this results section is with the inclusion of an equivalence test. Note that the 95% CI for the correlation was obtained with the MBESS command: ci.cc(r = .09, n = 267)
 
+## References
+
