--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -7044,6 +7044,9 @@ The relation between academic performance and self-esteem was non-significant, \
 
 Notice how much clearer and stronger this results section is with the inclusion of an equivalence test. Note that the 95\% CI for the correlation was obtained with the MBESS command: ci.cc(r = .09, n = 267)
 
+\hypertarget{references}{%
+\section{References}\label{references}}
+
   \bibliography{book.bib,packages.bib}
 
 \backmatter
