--- a/08-power_effect_size.Rmd
+++ b/08-power_effect_size.Rmd
@@ -1,5 +1,5 @@
 
-# Sample size analysis for NHST
+# NHST and sample size
 
 ## Required
 
@@ -871,6 +871,4 @@ print(r_critical)
 ```
 
 This indicates that with a sample size of 261 that only sample correlations greater than $r$ = .10 (rounded) will be significant. 
-
-## References
 
