--- a/11-enter_load.Rmd
+++ b/11-enter_load.Rmd
@@ -24,7 +24,7 @@ The following CRAN packages must be installed:
 | Required CRAN Packages |
 |-------------------|
 |apaTables          |
-|HMisc              |
+|Hmisc              |
 |janitor            |
 |psych              |
 |skimr              |
