--- a/packages.bib
+++ b/packages.bib
@@ -6,13 +6,15 @@
   year = {2020},
   url = {https://www.R-project.org/},
 }
+
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2020},
-  note = {R package version 0.19.1},
-  url = {https://github.com/rstudio/bookdown},
+  note = {R package version 0.20},
+  url = {https://CRAN.R-project.org/package=bookdown},
 }
+
 @Manual{R-cocor,
   title = {cocor: Comparing Correlations},
   author = {Birk Diedenhofen},
@@ -20,6 +22,7 @@
   note = {R package version 1.1-3},
   url = {https://CRAN.R-project.org/package=cocor},
 }
+
 @Manual{R-datasauRus,
   title = {datasauRus: Datasets from the Datasaurus Dozen},
   author = {Steph Locke and Lucy {D'Agostino McGowan}},
@@ -27,19 +30,23 @@
   note = {R package version 0.1.4},
   url = {https://CRAN.R-project.org/package=datasauRus},
 }
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  author = {Hadley Wickham and Romain François and Lionel {
+             Henry} and Kirill Müller},
   year = {2020},
-  note = {R package version 1.0.0},
+  note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
+
 @Manual{R-emoGG,
   title = {emoGG: Use Emoji in ggplot2},
   author = {David L Miller},
   year = {2020},
   note = {R package version 0.0.2},
 }
+
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
@@ -47,6 +54,7 @@
   note = {R package version 0.5.0},
   url = {https://CRAN.R-project.org/package=forcats},
 }
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
@@ -54,6 +62,7 @@
   note = {R package version 3.3.2},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
+
 @Manual{R-janitor,
   title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
   author = {Sam Firke},
@@ -61,26 +70,30 @@
   note = {R package version 2.0.1},
   url = {https://CRAN.R-project.org/package=janitor},
 }
+
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2020},
-  note = {R package version 1.28},
+  note = {R package version 1.29},
   url = {https://CRAN.R-project.org/package=knitr},
 }
+
 @Manual{R-learnSampling,
   title = {learnSampling: Tools to help learn sampling},
   author = {David J. Stanley},
   year = {2020},
   note = {R package version 0.2},
 }
+
 @Manual{R-MBESS,
   title = {MBESS: The MBESS R Package},
   author = {Ken Kelley},
   year = {2020},
-  note = {R package version 4.7.0},
+  note = {R package version 4.8.0},
   url = {https://CRAN.R-project.org/package=MBESS},
 }
+
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
@@ -88,6 +101,7 @@
   note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
 }
+
 @Manual{R-pwr,
   title = {pwr: Basic Functions for Power Analysis},
   author = {Stephane Champely},
@@ -95,6 +109,7 @@
   note = {R package version 1.3-0},
   url = {https://CRAN.R-project.org/package=pwr},
 }
+
 @Manual{R-RColorBrewer,
   title = {RColorBrewer: ColorBrewer Palettes},
   author = {Erich Neuwirth},
@@ -102,6 +117,7 @@
   note = {R package version 1.1-2},
   url = {https://CRAN.R-project.org/package=RColorBrewer},
 }
+
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Romain Francois},
@@ -109,20 +125,23 @@
   note = {R package version 1.3.1},
   url = {https://CRAN.R-project.org/package=readr},
 }
+
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2020},
-  note = {R package version 2.2},
+  note = {R package version 2.3},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
+
 @Manual{R-skimr,
   title = {skimr: Compact and Flexible Summaries of Data},
   author = {Elin Waring and Michael Quinn and Amelia McNamara and Eduardo {Arino de la Rubia} and Hao Zhu and Shannon Ellis},
   year = {2020},
-  note = {R package version 2.1.1},
+  note = {R package version 2.1.2},
   url = {https://CRAN.R-project.org/package=skimr},
 }
+
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
@@ -130,6 +149,7 @@
   note = {R package version 1.4.0},
   url = {https://CRAN.R-project.org/package=stringr},
 }
+
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
@@ -137,13 +157,15 @@
   note = {R package version 3.0.3},
   url = {https://CRAN.R-project.org/package=tibble},
 }
+
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Lionel Henry},
+  author = {Hadley Wickham},
   year = {2020},
-  note = {R package version 1.1.0},
+  note = {R package version 1.1.2},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
+
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the 'Tidyverse'},
   author = {Hadley Wickham},
@@ -151,6 +173,7 @@
   note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
+
 @Manual{R-TOSTER,
   title = {TOSTER: Two One-Sided Tests (TOST) Equivalence Testing},
   author = {Daniel Lakens},
@@ -158,6 +181,7 @@
   note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=TOSTER},
 }
+
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
   author = {Yihui Xie},
@@ -167,6 +191,7 @@
   note = {ISBN 978-1138700109},
   url = {https://github.com/rstudio/bookdown},
 }
+
 @Article{cocor2015,
   author = {Birk Diedenhofen and Jochen Musch},
   year = {2015},
@@ -179,6 +204,7 @@
   url = {http://dx.doi.org/10.1371/journal.pone.0121945},
   publisher = {Public Library of Science},
 }
+
 @Book{ggplot22016,
   author = {Hadley Wickham},
   title = {ggplot2: Elegant Graphics for Data Analysis},
@@ -187,6 +213,7 @@
   isbn = {978-3-319-24277-4},
   url = {https://ggplot2.tidyverse.org},
 }
+
 @Book{knitr2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
@@ -197,6 +224,7 @@
   note = {ISBN 978-1498716963},
   url = {https://yihui.org/knitr/},
 }
+
 @InCollection{knitr2014,
   booktitle = {Implementing Reproducible Computational Research},
   editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
@@ -207,6 +235,7 @@
   note = {ISBN 978-1466561595},
   url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
+
 @Book{rmarkdown2018,
   title = {R Markdown: The Definitive Guide},
   author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
@@ -216,6 +245,7 @@
   note = {ISBN 9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
 }
+
 @Article{tidyverse2019,
   title = {Welcome to the {tidyverse}},
   author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
@@ -226,6 +256,7 @@
   pages = {1686},
   doi = {10.21105/joss.01686},
 }
+
 @Article{TOSTER2017,
   author = {Daniel Lakens},
   title = {Equivalence tests: A practical primer for t-tests, correlations, and meta-analyses},
@@ -235,3 +266,4 @@
   pages = {1--8},
   doi = {10.1177/1948550617697177},
 }
+
