--- a/12-ppv.Rmd
+++ b/12-ppv.Rmd
@@ -23,7 +23,7 @@ $$
 
 $$
 \begin{align}
-P(\text{effect} \cap [p < .05]) &= P(\text{effect}) \times P(\text{detecting it}) \\
+P(\text{effect} \cap [p < .05]) &= P(\text{effect}) \times P(\text{sig. test}) \\
 &= P(\text{effect}) \times \text{Power} \\
 &= 0.40 \times 0.30 \\
 &= 0.12 \\
@@ -46,7 +46,10 @@ $$
 
 $$
 \begin{align}
-P(\text{effect} | p < .05) = \frac{P(\text{effect} \cap [p < .05]) }{P(\text{effect} \cap [p < .05])  + P(\text{no effect} \cap [p < .05])}
+P(\text{effect} | p < .05) &= \frac{P(\text{effect} \cap [p < .05]) }{P(\text{effect} \cap [p < .05])  + P(\text{no effect} \cap [p < .05])} \\
+&= \frac{0.12 }{0.12  + 0.03} \\
+&= \frac{0.12 }{0.15} \\
+&= 0.80
 \end{align}
 $$
 
