--- a/12-ppv.Rmd
+++ b/12-ppv.Rmd
@@ -57,36 +57,41 @@ $$
 
 
 ```{r, echo = FALSE, out.width = "90%"}
-knitr::include_graphics("ch_ppv/images/sqplot1.png")
-```
-
-```{r, echo = FALSE, out.width = "90%"}
-knitr::include_graphics("ch_ppv/images/sqplot2.png")
+knitr::include_graphics("ch_ppv/images/fig1.png")
 ```
 
 
 ```{r, echo = FALSE, out.width = "90%"}
-knitr::include_graphics("ch_ppv/images/sqplot3.png")
+knitr::include_graphics("ch_ppv/images/fig2.png")
 ```
 
 ```{r, echo = FALSE, out.width = "90%"}
-knitr::include_graphics("ch_ppv/images/areaplot1.png")
+knitr::include_graphics("ch_ppv/images/fig3.png")
 ```
 
 ```{r, echo = FALSE, out.width = "90%"}
-knitr::include_graphics("ch_ppv/images/areaplot2.png")
+knitr::include_graphics("ch_ppv/images/fig4.png")
 ```
 
 ```{r, echo = FALSE, out.width = "90%"}
-knitr::include_graphics("ch_ppv/images/areaplot3.png")
+knitr::include_graphics("ch_ppv/images/fig5.png")
 ```
 
 ```{r, echo = FALSE, out.width = "90%"}
-knitr::include_graphics("ch_ppv/images/areaplot4.png")
+knitr::include_graphics("ch_ppv/images/fig6.png")
 ```
 
+```{r, echo = FALSE, out.width = "90%"}
+knitr::include_graphics("ch_ppv/images/fig7.png")
+```
 
+```{r, echo = FALSE, out.width = "90%"}
+knitr::include_graphics("ch_ppv/images/fig8.png")
+```
 
+```{r, echo = FALSE, out.width = "90%"}
+knitr::include_graphics("ch_ppv/images/fig9.png")
+```
 
 
 
