--- a/book.bib
+++ b/book.bib
@@ -418,3 +418,11 @@
   year={2009},
   publisher={Wiley Online Library}
 }
+
+
+@article{scheel2020excess,
+  title={An excess of positive results: Comparing the standard Psychology literature with Registered Reports},
+  author={Scheel, Anne M and Schijen, Mitchell and Lakens, Dani{\"e}l},
+  year={2020},
+  publisher={PsyArXiv}
+}
